Manifests/Ingressprod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-api-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"     # For GKE
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-prod-api-service
                port:
                  number: 80
